ingress/svc-clusterip.yml
kind: Service
apiVersion: v1
metadata:
  name: svc-clusterip
spec:
  type: ClusterIP
  selector:
    app: svc-example
  ports:
    - name: port-name
      protocol: TCP
      port: 80
      targetPort: 80
