ingress/my-ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: my-ingress
spec:
  rules:
    - http:
        paths:
          - path: /somepath
            pathType: Prefix
            backend:
              service:
                name: svc-clusterip
                port:
                  name: port-name
